deploy/k3s/haproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: haproxy
          image: haproxy:2.9
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8404
            - containerPort: 9999
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
            - name: maps
              mountPath: /var/lib/haproxy/maps
            - name: run
              mountPath: /var/run/haproxy
            - name: certs
              mountPath: /etc/haproxy/certs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: haproxy-config
        - name: maps
          emptyDir: {}
        - name: run
          emptyDir:
            medium: Memory
        - name: certs
          secret:
            secretName: haproxy-certs
