deploy/k3s/temporal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: temporal
          image: temporalio/auto-setup:latest
          ports:
            - containerPort: 7233
