deploy/k3s/headlamp.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
spec:
  type: ClusterIP
  ports:
    - port: 4466
      targetPort: 4466
      protocol: TCP
      name: http
  selector:
    app: headlamp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: headlamp
      containers:
        - name: headlamp
          image: ghcr.io/kubernetes-sigs/headlamp:latest
          args:
            - "-in-cluster"
            - "-plugins-dir=/headlamp/plugins"
            - "-oidc-client-id=$(OIDC_CLIENT_ID)"
            - "-oidc-client-secret=$(OIDC_CLIENT_SECRET)"
            - "-oidc-idp-issuer-url=https://login.microsoftonline.com/${OIDC_TENANT_ID}/v2.0"
            - "-oidc-scopes=openid,email,profile"
          ports:
            - containerPort: 4466
