deploy/k3s/temporal-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
spec:
  type: ClusterIP
  ports:
    - port: 8233
      targetPort: 8233
      protocol: TCP
      name: http
  selector:
    app: temporal-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui
  template:
    metadata:
      labels:
        app: temporal-ui
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: false
      containers:
        - name: temporal-ui
          image: temporalio/ui:latest
          ports:
            - containerPort: 8233
